--- a/notary-site/src/index.css
+++ b/notary-site/src/index.css
@@ -18,7 +18,7 @@
   }
 
   h1, h2 {
-    font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
+    font-family: var(--font-playfair), Georgia, 'Times New Roman', serif;
     font-weight: 500;
   }
 
